infra/k8s/dts-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dts-deloyment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dts-deloyment
  template:
    metadata:
      labels:
        app: dts-deloyment
    spec:
      containers:
        - name: dts-deloyment
          image: abimbolaolayemi/delivery-tracking-system:latest
          # resources:
          #   limits:
          #     memory: '512Mi'
          #     cpu: '500m'
          ports:
            - containerPort: 5000
