infra/k8s/postgres-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres-deployment
  template:
    metadata:
      labels:
        app: postgres-deployment
    spec:
      containers:
        - name: postgres-deployment
          image: postgres:latest
          # resources:
          #   limits:
          #     memory: '256Mi'
          #     cpu: '500m'
          ports:
            - containerPort: 6379
          volumeMounts:
            - mountPath: /var/lib/postgres/data/
              name: pgdb

      volumes:
        - name: pgdb
          persistentVolumeClaim:
            claimName: pg-claim
