infra/k8s/redis-deployement.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-deployment
  template:
    metadata:
      labels:
        app: redis-deployment
    spec:
      containers:
        - name: redis-deployment
          image: redis:latest
          resources:
            limits:
              memory: '256Mi'
              cpu: '500m'
          ports:
            - containerPort: 6379
