infra/k8s/dts-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dts-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    app: dts-deloyment
  ports:
    - port: 5000
      targetPort: 5000
