infra/k8s/postgres-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ip-service
spec:
  selector:
    app: postgres-deployment
  ports:
    - port: 5432
      targetPort: 5432
