infra/k8s/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    nginx.ingress.kubernetes.io/use-regex: 'true'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - api.delivery-tracking-system.com
      secretName:  api.delivery-tracking-system.com

  rules:
    - host:  api.delivery-tracking-system.com
      http:
        paths:
          - pathType: Prefix
            path: /api/v1/dts/.*
            backend:
              service:
                name: dts-cluster-ip-service
                port:
                  number: 5000
